fixed back button alignement

--- a/src/components/View.css
+++ b/src/components/View.css
@@ -10,9 +10,12 @@
     display: flex;
     justify-content: flex-end;
     align-items: center;
+    flex-wrap: wrap;
     height: 70px;
+    margin-bottom: 10px;
 }
 .home-container {
+    display: flex;
     flex-grow: 1;
     /* Align title */
     flex-basis: 0;
@@ -27,11 +30,13 @@
     background-position: center;
     box-shadow: 0px 0px 5px #000000;
 
-    margin-left: 15px;
+    margin-left: 10px;
+    margin-top: 10px;
 }
 
 .title {
     display: flex;
+    width: 100%;
     flex-grow: 1;
     justify-content: center;
     align-self: flex-end;
@@ -159,11 +164,13 @@
 
     .title {
         font-size: 35px;
+        width: unset;
     }
     .home-button {
         height: 55px;
         width: 55px;
         margin-left: 25px;
+        margin-top: 0px;
     }
     .filler {
         flex-grow: 1;
